--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pyasn1==0.4.6
 pyasn1-modules==0.2.6
 pygsheets==2.0.2
 pyodbc==4.0.27
+PyPika==0.35.15
 pyrsistent==0.15.4
 python-dateutil==2.8.0
 pytz==2019.2
@@ -40,6 +41,7 @@ rfc3987==1.3.8
 rsa==4.0
 simplejson==3.16.0
 six==1.12.0
+SQLAlchemy==1.3.11
 strict-rfc3339==0.7
 swagger-spec-validator==2.4.3
 toolz==0.10.0
