--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,11 @@ project.lock.json
 /App_Data
 /secrets
 /data
+/ApiKeys
 .secrets
 appsettings.json
 local.settings.json
-api.csv
-client_secret.json
 host.json
-db_conn.json
 .gitignore
 .funcignore
 
