--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,6 @@ dist
 # Python Environments
 .env
 .venv
-jambotenv
-jambotlinux
 env/
 venv/
 ENV/
@@ -45,6 +43,7 @@ env.bak/
 venv.bak/
 
 # Byte-compiled / optimized / DLL files
+Project/__pycache__/
 __pycache__/
 *.py[cod]
 *$py.class
