--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,51 @@
-aiohttp==3.5.4
+-i https://pypi.org/simple
+aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
 bitmex==0.2.2
-bravado==10.4.3
 bravado-core==5.16.0
+bravado==10.4.3
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
+discord.py==1.3.1
 discord==1.0.1
-discord.py==1.2.5
 google-api-python-client==1.7.11
-google-auth==1.10.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
-httplib2==0.15.0
+google-auth==1.11.0
+httplib2==0.17.0
 idna==2.8
 jsonpointer==2.0
 jsonref==0.2
-jsonschema==3.2.0
+jsonschema[format]==3.2.0
 monotonic==1.5
 msgpack-python==0.5.6
-multidict==4.7.3
-numpy==1.18.0
+multidict==4.7.4
+numpy==1.18.1
 oauthlib==3.1.0
 pandas==1.0.0rc0
-pandocfilters==1.4.2
-pathlib==1.0.1
+pyasn1-modules==0.2.8
 pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycparser==2.19
 pygsheets==2.0.2
-pyodbc==4.0.28
-PyPika==0.35.18
-pyrsistent==0.15.6
+pyodbc==4.0.30
+pypika==0.35.21
+pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==5.2
-requests==2.22.0
+pyyaml==5.3
 requests-oauthlib==1.3.0
-retrying==1.3.3
+requests==2.22.0
 rfc3987==1.3.8
 rsa==4.0
 simplejson==3.17.0
-six==1.13.0
-SQLAlchemy==1.3.12
+six==1.14.0
+sqlalchemy==1.3.13
 strict-rfc3339==0.7
 swagger-spec-validator==2.4.3
-toolz==0.10.0
-tornado==6.0.3
 typing-extensions==3.7.4.1
 uritemplate==3.0.1
-urllib3==1.25.7
+urllib3==1.25.8
 webcolors==1.10
-webencodings==0.5.1
-websockets==6.0
+websockets==8.1
 yarl==1.4.2
