--- a/Pipfile
+++ b/Pipfile
@@ -9,13 +9,14 @@ seaborn = "*"
 plotly = "*"
 joblib = "*"
 pylint = "*"
+ipykernel = "*"
 
 [packages]
 bitmex = "*"
 discord = "*"
 pypika = "*"
 pygsheets = "*"
-pyodbc = "*"
+pyodbc = "==4.0.28"
 pandas = "==1.0.0rc0"
 sqlalchemy = "*"
 pyyaml = "*"
