--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ discord = "*"
 pypika = "*"
 pygsheets = "*"
 pyodbc = "==4.0.28"
-pandas = "==1.0.0rc0"
+pandas = "*"
 sqlalchemy = "*"
 pyyaml = "*"
 numpy = "*"
