--- a/requirements.txt
+++ b/requirements.txt
@@ -3,49 +3,54 @@ aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
 bitmex==0.2.2
-bravado-core==5.16.0
-bravado==10.4.3
+bravado-core==5.16.1
+bravado==10.5.0
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
-discord.py==1.3.1
+discord.py==1.3.2
 discord==1.0.1
-google-api-python-client==1.7.11
+google-api-core==1.16.0
+google-api-python-client==1.8.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
-google-auth==1.11.0
+google-auth==1.11.3
+googleapis-common-protos==1.51.0
 httplib2==0.17.0
-idna==2.8
+idna==2.9
 jsonpointer==2.0
 jsonref==0.2
 jsonschema[format]==3.2.0
 monotonic==1.5
 msgpack-python==0.5.6
-multidict==4.7.4
-numpy==1.18.1
+msgpack==1.0.0
+multidict==4.7.5
+numpy==1.18.2
+oauth2client==4.1.3
 oauthlib==3.1.0
-pandas==1.0.0rc0
+pandas==1.0.3
+protobuf==3.11.3
 pyasn1-modules==0.2.8
 pyasn1==0.4.8
-pygsheets==2.0.2
-pyodbc==4.0.30
-pypika==0.35.21
+pygsheets==2.0.3
+pyodbc==4.0.28
+pypika==0.36.0
 pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
-pyyaml==5.3
+pyyaml==5.3.1
 requests-oauthlib==1.3.0
-requests==2.22.0
+requests==2.23.0
 rfc3987==1.3.8
 rsa==4.0
 simplejson==3.17.0
 six==1.14.0
-sqlalchemy==1.3.13
+sqlalchemy==1.3.15
 strict-rfc3339==0.7
-swagger-spec-validator==2.4.3
+swagger-spec-validator==2.5.0
 typing-extensions==3.7.4.1
 uritemplate==3.0.1
 urllib3==1.25.8
-webcolors==1.10
+webcolors==1.11.1
 websockets==8.1
 yarl==1.4.2
