--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ xgboost = "*"
 lightgbm = "*"
 ta = "*"
 shap = "*" # LLVM_CONFIG=/usr/local/Cellar/llvm@9/9.0.1_2/bin/llvm-config pipenv install shap --skip-lock
+ta-lib = "*"
 
 [requires]
 python_version = "3.9"
