--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ tsfresh = "^0.18.0"
 findiff = "^0.8.9"
 icecream = "^2.1.0"
 PeakUtils = "^1.3.3"
+python-binance = "^0.7.11"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
