--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[tool.autopep8]
+ignore = "E713, E731"
+max_line_length = 120
+
 [tool.poetry]
 name = "jambot"
 version = "0.1.0"
@@ -27,6 +31,7 @@ findiff = "^0.8.9"
 icecream = "^2.1.0"
 PeakUtils = "^1.3.3"
 python-binance = "^0.7.11"
+pre-commit = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
@@ -36,6 +41,9 @@ joblib = "^1.0.1"
 pylint = "^2.7.4"
 ipykernel = "^5.5.3"
 azure-functions = "^1.7.0"
+pytest = "^6.2.4"
+flake8 = "^3.9.2"
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
