--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,11 @@ pytest = "^6.2.4"
 flake8 = "^3.9.2"
 autopep8 = "^1.5.7"
 
+[tool.pytest.ini_options]
+testpaths = [
+    "tests"
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
