--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,20 +21,13 @@ PyYAML = "^5.4.1"
 numpy = "^1.20.2"
 aenum = "^3.0.0"
 sklearn = "^0.0"
-xgboost = "^1.3.3"
 lightgbm = "^3.2.0"
 ta = "^0.7.0"
-shap = "^0.39.0" # LLVM_CONFIG=/usr/local/Cellar/llvm@9/9.0.1_2/bin/llvm-config poetry add shap
-TA-Lib = "^0.4.19"
-tsfresh = "^0.18.0"
-findiff = "^0.8.9"
-icecream = "^2.1.0"
-PeakUtils = "^1.3.3"
-python-binance = "^0.7.11"
-pre-commit = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
+shap = "^0.39.0" # LLVM_CONFIG=/usr/local/Cellar/llvm@9/9.0.1_2/bin/llvm-config poetry add shap
+xgboost = "^1.3.3"
 seaborn = "^0.11.1"
 plotly = "^4.14.3"
 joblib = "^1.0.1"
@@ -45,6 +38,14 @@ pytest = "^6.2.4"
 flake8 = "^3.9.2"
 autopep8 = "^1.5.7"
 isort = "^5.8.0"
+pre-commit = "^2.12.1"
+azure-storage-blob = "^12.8.1"
+PeakUtils = "^1.3.3"
+python-binance = "^0.7.11"
+TA-Lib = "^0.4.19"
+tsfresh = "^0.18.0"
+findiff = "^0.8.9"
+icecream = "^2.1.0"
 
 [tool.pytest.ini_options]
 testpaths = [
