--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ python = "^3.9"
 bitmex = "^0.2.2"
 discord = "^1.0.1"
 PyPika = "^0.48.1"
-pygsheets = "^2.0.5"
 pyodbc = "^4.0.30"
 pandas = "^1.2.3"
 SQLAlchemy = "^1.4.7"
@@ -21,13 +20,14 @@ PyYAML = "^5.4.1"
 numpy = "^1.20.2"
 aenum = "^3.0.0"
 sklearn = "^0.0"
-lightgbm = "^3.2.0"
 ta = "^0.7.0"
+lightgbm = "^3.2.1"
+cryptography = "^3.4.7"
 
 [tool.poetry.dev-dependencies]
+pygsheets = "^2.0.5"
 jupyter = "^1.0.0"
 shap = "^0.39.0" # LLVM_CONFIG=/usr/local/Cellar/llvm@9/9.0.1_2/bin/llvm-config poetry add shap
-xgboost = "^1.3.3"
 seaborn = "^0.11.1"
 plotly = "^4.14.3"
 joblib = "^1.0.1"
@@ -40,12 +40,12 @@ autopep8 = "^1.5.7"
 isort = "^5.8.0"
 pre-commit = "^2.12.1"
 azure-storage-blob = "^12.8.1"
-PeakUtils = "^1.3.3"
-python-binance = "^0.7.11"
 TA-Lib = "^0.4.19"
-tsfresh = "^0.18.0"
 findiff = "^0.8.9"
 icecream = "^2.1.0"
+memory-profiler = "^0.58.0"
+filprofiler = "^2021.7.1"
+scalene = "^1.3.12"
 
 [tool.pytest.ini_options]
 testpaths = [
