--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ ta = "^0.7.0"
 lightgbm = "^3.2.1"
 cryptography = "^3.4.7"
 azure-storage-blob = "^12.8.1"
+google-cloud-logging = "^2.6.0"
 
 [tool.poetry.dev-dependencies]
 pygsheets = "^2.0.5"
@@ -45,7 +46,6 @@ findiff = "^0.8.9"
 icecream = "^2.1.0"
 memory-profiler = "^0.58.0"
 filprofiler = "^2021.7.1"
-scalene = "^1.3.12"
 
 [tool.pytest.ini_options]
 testpaths = [
