--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,8 @@ numpy = "==1.20.3"  # poetry run pip install numpy==1.20.3 --no-use-pep517
 aenum = "^3.0.0"
 sklearn = "^0.0"
 ta = "^0.7.0"
-cryptography = "^3.4.7"
-azure-storage-blob = "^12.8.1"
+# cryptography = "^3.4.7"
+# azure-storage-blob = "^12.8.1"
 pygsheets = "^2.0.5"
 jsonschema = "<4.0"
 lightgbm = "^3.3.1"
