--- a/jambot/_res/model_config.yaml
+++ b/jambot/_res/model_config.yaml
@@ -1,13 +1,13 @@
-ETHUSD:
-  thing: 5
 XBTUSD:
   boosting_type: dart
-  filter_fit_quantile: 0.7
+  filter_fit_quantile: 0.631
   learning_rate: 0.1
-  max_depth: 40
+  max_depth: 6
   n_estimators: 100
-  n_periods_smooth: 5
-  num_feats: 36
+  n_periods_smooth: 4
+  num_feats: 80
   num_leaves: 100
+  order_offset: -0.0014
   random_state: 0
-  target_n_periods: 26
+  target_n_periods: 29
+  weights_n_periods: 2
