--- a/jambot/_res/model_config.yaml
+++ b/jambot/_res/model_config.yaml
@@ -1,3 +1,42 @@
+BNBUSDT:
+  boosting_type: dart
+  filter_fit_quantile: 0.8955
+  learning_rate: 0.1
+  max_depth: 29
+  n_estimators: 86
+  n_periods_smooth: 1
+  num_feats: 80
+  num_leaves: 25
+  order_offset: -0.002
+  random_state: 0
+  target_n_periods: 40
+  weights_n_periods: 2
+DOGEUSDT:
+  boosting_type: dart
+  filter_fit_quantile: 0.2
+  learning_rate: 0.1
+  max_depth: 6
+  n_estimators: 100
+  n_periods_smooth: 10
+  num_feats: 80
+  num_leaves: 65
+  order_offset: -0.0001
+  random_state: 0
+  target_n_periods: 32
+  weights_n_periods: 33
+ETHUSDT:
+  boosting_type: dart
+  filter_fit_quantile: 0.6535
+  learning_rate: 0.1
+  max_depth: 6
+  n_estimators: 40
+  n_periods_smooth: 1
+  num_feats: 20
+  num_leaves: 54
+  order_offset: -0.00167
+  random_state: 0
+  target_n_periods: 2
+  weights_n_periods: 2
 XBTUSD:
   boosting_type: dart
   filter_fit_quantile: 0.631
