--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,10 @@ authors = ["Jayme Gordon <jaymegordo@gmail.com>"]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
 bitmex = "^0.2.2"
-Bybit = "^0.2.12"
 discord = "^1.0.1"
 PyPika = "^0.48.1"
 pyodbc = "^4.0.32"
-pandas = "^1.2.3"
+pandas = "^1.4.0"
 SQLAlchemy = {version = ">=1.4,<1.4.23"}
 PyYAML = "^5.4.1"
 numpy = "^1.22.0" #"==1.20.3"  # poetry run pip install numpy==1.20.3 --no-use-pep517
@@ -44,7 +43,7 @@ TA-Lib = "^0.4.19"
 findiff = "^0.8.9"
 icecream = "^2.1.0"
 memory-profiler = "^0.58.0"
-# filprofiler = "==2021.8.0"
+filprofiler = {git = "https://github.com/pythonspeed/filprofiler.git"}
 colored-traceback = "^0.3.0"
 colorlog = "^6.4.1"
 graphviz = "^0.17"
@@ -56,8 +55,12 @@ scikit-optimize = "^0.9.0"
 pytest-cov = "^3.0.0"
 jgutils = {path = "../jgutils", extras = ["colorlogging", "azurestorage", "terminaldf"], develop = true}
 tqdm = "^4.62.3"
-mlflow = "^1.21.0"
+mlflow = "^1.23.0"
 binance-connector = "^1.10.0"
+yappi = "^1.3.3"
+blackfire = "^1.10.0"
+bokeh = "^2.4.2"
+dask = {extras = ["distributed"], version = "^2022.2.0"}
 
 
 [tool.pytest.ini_options]
