--- a/jambot/_res/model_config.yaml
+++ b/jambot/_res/model_config.yaml
@@ -37,6 +37,32 @@ ETHUSDT:
   random_state: 0
   target_n_periods: 2
   weights_n_periods: 2
+MULTI_ALTS:
+  boosting_type: dart
+  filter_fit_quantile: 0.451
+  learning_rate: 0.1
+  max_depth: 29
+  n_estimators: 83
+  n_periods_smooth: 3
+  num_feats: 80
+  num_leaves: 47
+  order_offset: -0.002
+  random_state: 0
+  target_n_periods: 51
+  weights_n_periods: 2
+MULTI_ALTS1:
+  boosting_type: dart
+  filter_fit_quantile: 0.631
+  learning_rate: 0.1
+  max_depth: 6
+  n_estimators: 100
+  n_periods_smooth: 4
+  num_feats: 80
+  num_leaves: 100
+  order_offset: -0.0014
+  random_state: 0
+  target_n_periods: 29
+  weights_n_periods: 2
 XBTUSD:
   boosting_type: dart
   filter_fit_quantile: 0.631
