--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pygsheets = "^2.0.5"
 jsonschema = "<4.0"
 lightgbm = "^3.3.1"
 jgutils = {path = "../jgutils", extras = ["azurestorage"], develop = true}
+pandas-ta = "^0.3.14-beta.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -60,7 +61,9 @@ binance-connector = "^1.10.0"
 yappi = "^1.3.3"
 blackfire = "^1.10.0"
 bokeh = "^2.4.2"
-dask = {extras = ["distributed"], version = "^2022.2.0"}
+dask = {extras = ["distributed"], version = "==2022.01.0"}
+snakeviz = "^2.1.1"
+
 
 
 [tool.pytest.ini_options]
