--- a/jambot/_res/model_config.yaml
+++ b/jambot/_res/model_config.yaml
@@ -65,6 +65,7 @@ MULTI_ALTS1:
   weights_n_periods: 2
 XBTUSD:
   boosting_type: dart
+  # boosting_type: goss
   filter_fit_quantile: 0.631
   learning_rate: 0.1
   max_depth: 6
